step 4 from pem

--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-pem-db2.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-pem-db2.yaml
@@ -32,8 +32,8 @@ spec:
           image:
             repository: ibmcom/db2:11.5.7.0
             pullPolicy: IfNotPresent
-          storageClassName: ibmc-block-gold
-          #storageClassName: ocs-storagecluster-cephfs
+          #storageClassName: ibmc-block-gold
+          storageClassName: ocs-storagecluster-cephfs
           createdb: |
             CREATE DATABASE PEMDB AUTOMATIC STORAGE YES USING CODESET UTF-8 TERRITORY DEFAULT COLLATE USING IDENTITY PAGESIZE 4096;
             CONNECT TO PEMDB;
