removing step 2 sccm 2-services db2

--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -96,9 +96,9 @@ resources:
 - argocd/instances/ibm-pem.yaml
 
 # SCCM
-- argocd/instances/ibm-sccm-db2.yaml
-- argocd/instances/ibm-sccm-setup.yaml
-- argocd/instances/ibm-sccm.yaml
+#- argocd/instances/ibm-sccm-db2.yaml
+#- argocd/instances/ibm-sccm-setup.yaml
+#- argocd/instances/ibm-sccm.yaml
 
 # Required for IBM MQ
 #- argocd/instances/openldap.yaml
