--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-sfg-mq-nonprod.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-sfg-mq-nonprod.yaml
@@ -34,8 +34,8 @@ spec:
           image:
             repository: ibmcom/mq
             pullPolicy: IfNotPresent
-          storageClassName: ibmc-block-gold
-          #storageClassName: ocs-storagecluster-cephfs
+          storageClassName: ocs-storagecluster-cephfs
+          #storageClassName: ibmc-block-gold
   syncPolicy:
     automated:
       prune: true
